--- a/css/styles.css
+++ b/css/styles.css
@@ -153,8 +153,6 @@ body {
   padding-top: 188px;
   padding-bottom: 188px;
   margin: auto;
-  /* margin-left: auto;
-  margin-right: auto; */
 }
 .hero-title {
   margin-top: 0;
@@ -248,6 +246,7 @@ body {
   background: var(--footer-border-text-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   color: #000;
+  margin-bottom: 24px;
 
   transition-property: background-color;
   transition-duration: 250ms;
@@ -264,6 +263,54 @@ body {
   height: 8px;
   fill: currentColor;
 }
+/*                        forma---------- */
+.form-in-modal {
+  width: 408px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.form-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5px;
+
+  text-align: center;
+  letter-spacing: 0.02em;
+
+  color: #2e2f42;
+  display: block;
+  padding-top: 72px;
+  margin-bottom: 16px;
+}
+.form-field {
+  display: block;
+
+  padding-left: 24px;
+  padding-right: 24px;
+}
+.form-label {
+  font-size: 12px;
+  line-height: 1.17px;
+  letter-spacing: 0.04em;
+
+  color: #8e8f99;
+
+  display: inline-block;
+  text-align: left;
+
+  margin-bottom: 8px;
+}
+
+.form-input {
+  display: block;
+  width: 100%;
+  min-height: 40px;
+  border: 1px solid #2e2f42;
+  border-radius: 4px;
+}
+
 /*---------------- section feauteres */
 .feature {
   padding-top: 120px;
