--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,7 @@ body {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
+  text-align: left;
   position: absolute;
   min-width: 408px;
   min-height: 576px;
@@ -289,6 +290,7 @@ body {
 
   padding-left: 24px;
   padding-right: 24px;
+  position: relative;
 }
 .form-label {
   font-size: 12px;
@@ -298,17 +300,100 @@ body {
   color: #8e8f99;
 
   display: inline-block;
-  text-align: left;
 
   margin-bottom: 8px;
 }
-
+.form-icon {
+  position: absolute;
+  left: 10%;
+  top: 50%;
+  transform: translateX(-50%);
+  width: 18px;
+  height: 24px;
+  fill: #2e2f42;
+  display: inline-block;
+}
+.form-input:focus + .form-icon {
+  fill: #4d5ae5;
+  border: 1px solid #4d5ae5;
+  border-radius: 4px;
+}
 .form-input {
   display: block;
   width: 100%;
+  height: 40px;
   min-height: 40px;
   border: 1px solid #2e2f42;
   border-radius: 4px;
+  margin-bottom: 8px;
+}
+
+.form-comment {
+  width: 100%;
+}
+.form-comment::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+
+  color: rgba(46, 47, 66, 0.4);
+
+  padding-top: 8px;
+  padding-left: 16px;
+}
+.form-check {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17px;
+
+  letter-spacing: 0.04em;
+
+  color: #8e8f99;
+}
+.form-check-text {
+  font-size: 12px;
+  line-height: 1.17px;
+
+  letter-spacing: 0.04em;
+  text-decoration-line: underline;
+
+  color: #4d5ae5;
+  margin-top: 16px;
+}
+.form-field-check {
+  width: 16px;
+  height: 16px;
+}
+.form-btn {
+  padding-bottom: 24px;
+  margin-top: 24px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.form-button {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  align-items: center;
+  letter-spacing: 0.04em;
+
+  color: #ffffff;
+  background: #4d5ae5;
+
+  cursor: pointer;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 32px;
+  padding-right: 32px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  text-align: center;
 }
 
 /*---------------- section feauteres */
@@ -354,7 +439,6 @@ body {
   max-height: 64px;
   justify-content: center;
   align-items: center;
-  /* margin: auto; */
 
   display: flex;
 }
@@ -561,7 +645,7 @@ body {
 .footer-social-title {
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
 
   letter-spacing: 0.02em;
 
