--- a/css/styles.css
+++ b/css/styles.css
@@ -305,31 +305,39 @@ body {
 }
 .form-icon {
   position: absolute;
-  left: 10%;
-  top: 50%;
-  transform: translateX(-50%);
-  width: 18px;
-  height: 24px;
+  left: 40px;
+  top: 66%;
+
+  transform: translateY(-50%);
+
   fill: #2e2f42;
-  display: inline-block;
+  display: block;
+}
+.form-input:focus {
+  border: 1px solid #4d5ae5;
 }
 .form-input:focus + .form-icon {
   fill: #4d5ae5;
-  border: 1px solid #4d5ae5;
-  border-radius: 4px;
 }
 .form-input {
   display: block;
+  outline: none;
   width: 100%;
   height: 40px;
   min-height: 40px;
   border: 1px solid #2e2f42;
   border-radius: 4px;
   margin-bottom: 8px;
+  padding-left: 38px;
 }
-
+textarea {
+  resize: none;
+}
 .form-comment {
   width: 100%;
+}
+.form-comment:focus {
+  border: 1px solid #4d5ae5;
 }
 .form-comment::placeholder {
   font-size: 12px;
@@ -384,6 +392,8 @@ body {
   color: #ffffff;
   background: #4d5ae5;
 
+  min-width: 169px;
+  min-height: 56px;
   cursor: pointer;
   padding-top: 16px;
   padding-bottom: 16px;
