--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,19 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .list {
   padding: 0;
   margin: 0;
@@ -264,7 +277,13 @@ body {
   height: 8px;
   fill: currentColor;
 }
+
+/* ---------------------------------------- */
+
+/* ---------------------------------------- */
+
 /*                        forma---------- */
+
 .form-in-modal {
   width: 408px;
   margin-left: auto;
@@ -311,33 +330,50 @@ body {
   transform: translateY(-50%);
 
   fill: #2e2f42;
-  display: block;
-}
-.form-input:focus {
-  border: 1px solid #4d5ae5;
-}
-.form-input:focus + .form-icon {
-  fill: #4d5ae5;
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
 .form-input {
   display: block;
   outline: none;
   width: 100%;
   height: 40px;
-  min-height: 40px;
+
   border: 1px solid #2e2f42;
   border-radius: 4px;
   margin-bottom: 8px;
   padding-left: 38px;
 }
+.form-input:focus {
+  border: 1px solid #4d5ae5;
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus + .form-icon {
+  fill: #4d5ae5;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 textarea {
   resize: none;
 }
 .form-comment {
   width: 100%;
+  min-height: 138px;
+  outline: none;
+  border: 1px solid #2e2f42;
+  border-radius: 4px;
+  padding-left: 16px;
 }
 .form-comment:focus {
   border: 1px solid #4d5ae5;
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-comment::placeholder {
   font-size: 12px;
@@ -347,9 +383,11 @@ textarea {
   color: rgba(46, 47, 66, 0.4);
 
   padding-top: 8px;
-  padding-left: 16px;
 }
-.form-check {
+
+/*     ----------checkbox----- */
+
+.form-check-desc {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -360,6 +398,7 @@ textarea {
 
   color: #8e8f99;
 }
+
 .form-check-text {
   font-size: 12px;
   line-height: 1.17px;
@@ -370,10 +409,37 @@ textarea {
   color: #4d5ae5;
   margin-top: 16px;
 }
-.form-field-check {
+.form-check {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.checkbox-icon {
+  margin-top: 16px;
+  margin-right: 8px;
+  border: 1px solid #2e2f42;
+  border-radius: 2px;
   width: 16px;
   height: 16px;
+  background-position: center;
+  background-size: contain;
 }
+.form-check:checked + .checkbox-icon {
+  background: #404bbf;
+}
+/* .form-check-desc:checked + .checkbox-icon {
+  background: #404bbf;
+} */
+/* -------------- */
 .form-btn {
   padding-bottom: 24px;
   margin-top: 24px;
