--- a/css/styles.css
+++ b/css/styles.css
@@ -765,6 +765,143 @@ textarea {
 .footer-social-link:focus {
   background: var(--focus-icon-color);
 }
+.footer-box {
+  display: inline-block;
+  width: 453px;
+  margin-left: 80px;
+}
+.footer-form-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin: 0;
+}
+.footer-form {
+  display: flex;
+  margin-top: 16px;
+}
+.footer-form-input {
+  width: 264px;
+  height: 40px;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  outline: transparent;
+  border-radius: 4px;
+  padding-left: 16px;
+}
+
+.footer-form-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
+  color: #ffffff;
+}
+.footer-form-button {
+  width: 168px;
+  height: 40px;
+  margin-left: 24px;
+  background: #4d5ae5;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: transparent;
+  cursor: pointer;
+  padding: 8px 16px 8px 24px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-form-button:focus,
+.footer-form-button:hover {
+  background-color: var(--accent-button-color);
+}
+.footer-form-icon {
+  width: 24px;
+  height: 24px;
+  margin-left: 16px;
+}
+/* ------------------ */
+
+/* .footer-form {
+  display: inline-block;
+  width: 264px;
+  margin-left: 80px;
+}
+.footer-form-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+
+  margin: 0;
+}
+.footer-input {
+  display: inline;
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background: #2e2f42;
+  padding-left: 16px;
+  margin-right: 24px;
+  background-color: transparent;
+}
+.footer-input::placeholder {
+  font-size: 12px;
+  line-height: 1.5;
+
+  display: inline-block;
+  align-items: center;
+  letter-spacing: 0.04em;
+
+  color: #ffffff;
+}
+.footer-form-group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 16px;
+  padding-left: 80px;
+}
+.footer-form-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-form-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+
+  letter-spacing: 0.04em;
+
+  color: #ffffff;
+
+  width: 165px;
+  height: 40px;
+  background: #4d5ae5;
+  border-radius: 4px;
+  border: none;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+.footer-form-icon {
+  position: absolute;
+} */
 
 /* PORTFOLIO */
 /* button filters */
