--- a/css/styles.css
+++ b/css/styles.css
@@ -386,10 +386,12 @@ textarea {
 }
 
 /*     ----------checkbox----- */
-
+.form-field-checkbox {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
 .form-check-desc {
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17px;
@@ -428,8 +430,35 @@ textarea {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.modal-form-custom-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  margin-top: 16px;
+  margin-left: 24pxpx;
+  margin-right: 8px;
 
+  border: 1px solid #2e2f42;
+  border-radius: 2px;
+}
 .checkbox-icon {
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  margin-right: 0;
+}
+.check-input:checked + .modal-form-custom-checkbox {
+  background-color: #404bbf;
+  border: 1px solid #404bbf;
+}
+.check-input:checked + .modal-form-custom-checkbox .checkbox-icon {
+  opacity: 1;
+  fill: #fff;
+}
+/* .checkbox-icon {
   display: inline-block;
   margin-top: 16px;
   margin-right: 8px;
@@ -442,7 +471,7 @@ textarea {
 }
 .check-input:checked + .checkbox-icon {
   background: #404bbf;
-}
+} */
 
 /* -------------- */
 .form-btn {
@@ -791,6 +820,9 @@ textarea {
   border-radius: 4px;
   padding-left: 16px;
 }
+.footer-form-input:focus {
+  color: #ffffff;
+}
 
 .footer-form-input::placeholder {
   font-weight: 400;
@@ -817,7 +849,6 @@ textarea {
   justify-content: center;
   outline: transparent;
   cursor: pointer;
-  padding: 8px 16px 8px 24px;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -831,77 +862,6 @@ textarea {
   margin-left: 16px;
 }
 /* ------------------ */
-
-/* .footer-form {
-  display: inline-block;
-  width: 264px;
-  margin-left: 80px;
-}
-.footer-form-text {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-
-  margin: 0;
-}
-.footer-input {
-  display: inline;
-  width: 264px;
-  height: 40px;
-  border: 1px solid #ffffff;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background: #2e2f42;
-  padding-left: 16px;
-  margin-right: 24px;
-  background-color: transparent;
-}
-.footer-input::placeholder {
-  font-size: 12px;
-  line-height: 1.5;
-
-  display: inline-block;
-  align-items: center;
-  letter-spacing: 0.04em;
-
-  color: #ffffff;
-}
-.footer-form-group {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 16px;
-  padding-left: 80px;
-}
-.footer-form-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.footer-form-button {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-
-  letter-spacing: 0.04em;
-
-  color: #ffffff;
-
-  width: 165px;
-  height: 40px;
-  background: #4d5ae5;
-  border-radius: 4px;
-  border: none;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-}
-
-.footer-form-icon {
-  position: absolute;
-} */
 
 /* PORTFOLIO */
 /* button filters */
