--- a/css/styles.css
+++ b/css/styles.css
@@ -278,10 +278,6 @@ body {
   fill: currentColor;
 }
 
-/* ---------------------------------------- */
-
-/* ---------------------------------------- */
-
 /*                        forma---------- */
 
 .form-in-modal {
@@ -386,11 +382,7 @@ textarea {
 }
 
 /*     ----------checkbox----- */
-.form-field-checkbox {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-}
+
 .form-check-desc {
   font-weight: 400;
   font-size: 12px;
@@ -413,8 +405,7 @@ textarea {
 }
 .check-label {
   display: block;
-  padding-left: 24px;
-  padding-right: 24px;
+
   position: relative;
 }
 .check-input {
@@ -439,9 +430,12 @@ textarea {
   margin-top: 16px;
   margin-left: 24pxpx;
   margin-right: 8px;
-
+  cursor: pointer;
   border: 1px solid #2e2f42;
   border-radius: 2px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .checkbox-icon {
   display: inline-block;
@@ -458,20 +452,6 @@ textarea {
   opacity: 1;
   fill: #fff;
 }
-/* .checkbox-icon {
-  display: inline-block;
-  margin-top: 16px;
-  margin-right: 8px;
-  border: 1px solid #2e2f42;
-  border-radius: 2px;
-  width: 16px;
-  height: 16px;
-  background-position: center;
-  background-size: contain;
-}
-.check-input:checked + .checkbox-icon {
-  background: #404bbf;
-} */
 
 /* -------------- */
 .form-btn {
@@ -504,8 +484,15 @@ textarea {
   border-radius: 4px;
   border: none;
   text-align: center;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.form-button:hover,
+.form-button:focus {
+  background-color: var(--accent-button-color);
+  color: var(--footer-border-text-color);
+}
 /*---------------- section feauteres */
 .feature {
   padding-top: 120px;
