--- a/css/styles.css
+++ b/css/styles.css
@@ -321,7 +321,7 @@ body {
 .form-icon {
   position: absolute;
   left: 40px;
-  top: 66%;
+  top: 68%;
 
   transform: translateY(-50%);
 
@@ -336,7 +336,7 @@ body {
   width: 100%;
   height: 40px;
 
-  border: 1px solid #2e2f42;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   margin-bottom: 8px;
   padding-left: 38px;
@@ -361,7 +361,7 @@ textarea {
   width: 100%;
   min-height: 138px;
   outline: none;
-  border: 1px solid #2e2f42;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 16px;
 }
